2012-02-23
* start moving maintenance scripts into the 'maintenance' directory

2012-02-22
* add plugin that queries a database with packages extracted from sources from
distributions

2012-02-21
* several cleanups, remove unnecessary calls and conversions

2012-02-19
* correctly process scans that don't define "noscan"
* introduce environment variable to indicate whether or not there is a fully
generated caching database
* inline some code in ranking.py, reducing memory consumption

2012-02-18
* pass environment variables to XML pretty printing methods

2012-02-15
* remove use of dynamic symbols in ranking.py, to decrease false positives

2012-01-30
* add uncompression of compress'd files
* tagging 6.0

2012-01-23
* avoid duplicate license scanning

2012-01-22
* actually make a copy of the environment, to prevent "Argument list too long"
errors

2012-01-20
* determine the size of JFFS2 file systems
* remove limit of JFFS2 scanning (whole file). JFFS2 file systems can now also
be carved from the middle of a file.
* return order in which identifiers are found. This is not yet used.

2012-01-19
* big file fixes for byteswapping
* rework identifiers for .exe files
* big file fixes for PDF files

2012-01-16
* add lrzip unpacking
* enable cramfs checking by default
* add another squashfs variant (from DD-WRT)

2012-01-14
* prepare for 6.0 release
* fix bugs in RPM unpacking

2012-01-13
* further preprocess strings that go into the database. Specifically we split
on strings that 'strings' will split on when reading a binary file
* remove control characters in escaped form at the start of a string
* make multiprocessing configurable in the configuration

2012-01-10
* don't run leaf scans on duplicate files. Instead run the scans just once and
recombine the results later.

2012-01-09
* don't unnecessarily run program scans and postrun scans if none are defined
in the configuration
* only pass the configuration of the program scans to the program scans. This