@@ -449,3 +449,10 @@ type    = program
 module  = bat.checks
 method  = searchWpaSupplicant
 noscan  = text:xml:graphics:pdf:compressed
+
+#[images]
+#type    = postrun
+#module  = bat.images
+#method  = generateImages
+#noscan  = text:xml:graphics:pdf
+#envvars = BAT_IMAGEDIR=/tmp/images
